--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <title>Portfolio</title>
   </head>
   <body>
+    <!---------NavBar Start---------->
+    <!---------NavBar Start---------->
     <header class="header">
       <div class="logo">
-        <a href="#home">Morgen <span>Smit</span></a>
+        <a href="#home">Himel <span>Sahadat</span></a>
       </div>
 
       <nav class="navbar">
@@ -26,5 +28,94 @@
         </ul>
       </nav>
     </header>
+    <!---------NavBar End---------->
+    <!---------NavBar End---------->
+
+    <!---------Home Section Start---------->
+    <!---------Home Section Start---------->
+    <section class="home" id="home">
+      <div class="home-content">
+        <h1>Hi, It's <span>Himel</span></h1>
+        <h3>I am a <span>Web Developer</span></h3>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt vel eos
+          assumenda, mollitia, consequatur atque ratione voluptatem, et itaque
+          sint tempora quae necessitatibus odio ea expedita dolore voluptates
+          pariatur aliquam.
+        </p>
+        <div class="social-icon">
+          <a href="#"><i class="bx bxl-linkedin"></i></a>
+          <a href="#"><i class="bx bxl-facebook"></i></a>
+          <a href="#"><i class="bx bxl-instagram"></i></a>
+          <a href="#"><i class="bx bxl-github"></i></a>
+        </div>
+        <div class="btn-group">
+          <a href="#" class="btn">Hire</a>
+          <a href="#contact" class="btn">Contact</a>
+        </div>
+      </div>
+      <div class="home-img">
+        <img src="img/home-img.jpg" alt="Portrait" />
+      </div>
+    </section>
+    <!---------Home Section End---------->
+
+    <!---------Educaion Section Start---------->
+    <section class="education" id="education">
+      <h2 class="heading">Education</h2>
+      <div class="timeline-items">
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-date">2020-2024</div>
+          <div class="timeline-content">
+            <h3>University</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
+              incidunt eaque aliquam quam nostrum vero repellat iusto hic
+              sapiente odit.
+            </p>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-date">2017-2019</div>
+          <div class="timeline-content">
+            <h3>College</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
+              incidunt eaque aliquam quam nostrum vero repellat iusto hic
+              sapiente odit.
+            </p>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-date">2013-2015</div>
+          <div class="timeline-content">
+            <h3>High School</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
+              incidunt eaque aliquam quam nostrum vero repellat iusto hic
+              sapiente odit.
+            </p>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-date">2005-2013</div>
+          <div class="timeline-content">
+            <h3>School</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
+              incidunt eaque aliquam quam nostrum vero repellat iusto hic
+              sapiente odit.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
