--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <ul>
           <li><a href="#home" class="active">Home</a></li>
           <li><a href="#education">Education</a></li>
-          <li><a href="#service">Service</a></li>
-          <li><a href="#testimonial">Testimonial</a></li>
+          <li><a href="#certifications">Certifications</a></li>
+          <li><a href="#skills">Skills</a></li>
           <li><a href="contact">Contact</a></li>
         </ul>
       </nav>
@@ -38,16 +38,20 @@
         <h1>Hi, It's <span>Himel</span></h1>
         <h3>I am a <span>Web Developer</span></h3>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt vel eos
-          assumenda, mollitia, consequatur atque ratione voluptatem, et itaque
-          sint tempora quae necessitatibus odio ea expedita dolore voluptates
-          pariatur aliquam.
+          A skilled web developer specializing in creating responsive,
+          user-friendly websites. Proficient in front-end and back-end
+          technologies, delivering seamless digital experiences for diverse
+          client needs.
         </p>
         <div class="social-icon">
-          <a href="#"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/himelsahadat/"
+            ><i class="bx bxl-linkedin"></i
+          ></a>
           <a href="#"><i class="bx bxl-facebook"></i></a>
           <a href="#"><i class="bx bxl-instagram"></i></a>
-          <a href="#"><i class="bx bxl-github"></i></a>
+          <a href="https://github.com/himelsahadat"
+            ><i class="bx bxl-github"></i
+          ></a>
         </div>
         <div class="btn-group">
           <a href="#" class="btn">Hire</a>
@@ -69,11 +73,8 @@
           <div class="timeline-date">2020-2024</div>
           <div class="timeline-content">
             <h3>University</h3>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
-              incidunt eaque aliquam quam nostrum vero repellat iusto hic
-              sapiente odit.
-            </p>
+            <h4>American Internation University Of Bangladesh</h4>
+            <p>Computer Science & Engineering</p>
           </div>
         </div>
 
@@ -82,11 +83,8 @@
           <div class="timeline-date">2017-2019</div>
           <div class="timeline-content">
             <h3>College</h3>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
-              incidunt eaque aliquam quam nostrum vero repellat iusto hic
-              sapiente odit.
-            </p>
+            <h4>Dhaka Imperial College</h4>
+            <p>Science</p>
           </div>
         </div>
 
@@ -95,11 +93,8 @@
           <div class="timeline-date">2013-2015</div>
           <div class="timeline-content">
             <h3>High School</h3>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
-              incidunt eaque aliquam quam nostrum vero repellat iusto hic
-              sapiente odit.
-            </p>
+            <h4>Motijheel Model School & College</h4>
+            <p>Science</p>
           </div>
         </div>
 
@@ -117,5 +112,175 @@
         </div>
       </div>
     </section>
+    <!---------Educaion Section End---------->
+    <!---------Educaion Section End---------->
+
+    <!---------Certification Section Start---------->
+    <!---------Certification Section Start---------->
+    <section class="certificate" id="certifications">
+      <h1 class="heading">Certifications</h1>
+      <div class="certificate-container">
+        <div class="certificate-box">
+          <div class="certificate-info">
+            <h4>
+              Javascript,Bootstrap,& PHP<a
+                href="https://www.udemy.com/certificate/UC-48e599b0-2abe-4f79-9910-b273a952bd5e/"
+                ><i class="bx bx-link-external"></i
+              ></a>
+            </h4>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+              dolor provident veritatis architecto veniam tenetur, molestiae
+              possimus odit fugit facere aliquid alias eos reprehenderit ut.
+            </p>
+          </div>
+        </div>
+
+        <div class="certificate-box">
+          <div class="certificate-info">
+            <h4>
+              Pearson PTE <a href=""><i class="bx bx-link-external"></i></a>
+            </h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+              dolor provident veritatis architecto veniam tenetur, molestiae
+              possimus odit fugit facere aliquid alias eos reprehenderit ut.
+            </p>
+          </div>
+        </div>
+
+        <div class="certificate-box">
+          <div class="certificate-info">
+            <h4>
+              MERN - Interactive Cares
+              <a href=""><i class="bx bx-link-external"></i></a>
+            </h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+              dolor provident veritatis architecto veniam tenetur, molestiae
+              possimus odit fugit facere aliquid alias eos reprehenderit ut.
+            </p>
+          </div>
+        </div>
+
+        <div class="certificate-box">
+          <div class="certificate-info">
+            <h4>
+              Data Structure <a href=""><i class="bx bx-link-external"></i></a>
+            </h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+              dolor provident veritatis architecto veniam tenetur, molestiae
+              possimus odit fugit facere aliquid alias eos reprehenderit ut.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!---------Certification Section End---------->
+    <!---------Certification Section End---------->
+
+    <!---------Skills Section Start---------->
+    <!---------Skills Section Start---------->
+    <section class="skill" id="skills">
+      <h1 class="heading">My Skills</h1>
+      <div class="skill-container">
+        <div class="skill-box">
+          <h2>Programming Skills</h2>
+          <div class="skill-info">
+            <div class="subject">HTML</div>
+            <div class="progress-bar" value="97%">
+              <div class="progress-line" style="max-width: 97%"></div>
+            </div>
+          </div>
+
+          <div class="skill-info">
+            <div class="subject">Css</div>
+            <div class="progress-bar" value="92%">
+              <div class="progress-line" style="max-width: 92%"></div>
+            </div>
+          </div>
+
+          <div class="skill-info">
+            <div class="subject">Javascript</div>
+            <div class="progress-bar" value="81%">
+              <div class="progress-line" style="max-width: 81%"></div>
+            </div>
+          </div>
+
+          <div class="skill-info">
+            <div class="subject">React</div>
+            <div class="progress-bar" value="62%">
+              <div class="progress-line" style="max-width: 62%"></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="skill-box">
+          <h2>Designing Skills</h2>
+          <div class="skill-info">
+            <div class="subject">Photoshop</div>
+            <div class="progress-bar" value="90%">
+              <div class="progress-line" style="max-width: 90%"></div>
+            </div>
+          </div>
+
+          <div class="skill-info">
+            <div class="subject">Figma</div>
+            <div class="progress-bar" value="87%">
+              <div class="progress-line" style="max-width: 87%"></div>
+            </div>
+          </div>
+
+          <div class="skill-info">
+            <div class="subject">Illustration</div>
+            <div class="progress-bar" value="63%">
+              <div class="progress-line" style="max-width: 63%"></div>
+            </div>
+          </div>
+
+          <div class="skill-info">
+            <div class="subject">Responsive Design</div>
+            <div class="progress-bar" value="95%">
+              <div class="progress-line" style="max-width: 95%"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!---------Skills Section End---------->
+    <!---------Skills Section End---------->
+
+    <!---------Contact Section Start---------->
+    <!---------Contact Section Start---------->
+    <section class="contact" id="contact">
+      <h2 class="heading">Contact <span>Me</span></h2>
+      <form action="">
+        <div class="input-gorup">
+          <div class="input-box">
+            <input type="text" placeholder="Full name" />
+            <input type="email" placeholder="Email" />
+          </div>
+          <div class="input-box">
+            <input type="number" placeholder="Enter Number" />
+            <input type="text" placeholder="Subject" />
+          </div>
+        </div>
+        <div class="input-gorup-2">
+          <textarea
+            name=""
+            id=""
+            cols="30"
+            rows="10"
+            placeholder="Your Message"
+          ></textarea>
+          <input type="submit" value="Send Message" class="btn">
+        </div>
+      </form>
+    </section>
+    <!---------Contact Section End---------->
+    <!---------Contact Section End---------->
   </body>
 </html>
