Contact & Footer Section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li><a href="#education">Education</a></li>
           <li><a href="#certifications">Certifications</a></li>
           <li><a href="#skills">Skills</a></li>
-          <li><a href="contact">Contact</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -103,11 +103,8 @@
           <div class="timeline-date">2005-2013</div>
           <div class="timeline-content">
             <h3>School</h3>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
-              incidunt eaque aliquam quam nostrum vero repellat iusto hic
-              sapiente odit.
-            </p>
+            <h4>Motijheel Model School</h4>
+            <p>class: 1-8, Motijheel</p>
           </div>
         </div>
       </div>
@@ -130,9 +127,9 @@
             </h4>
 
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-              dolor provident veritatis architecto veniam tenetur, molestiae
-              possimus odit fugit facere aliquid alias eos reprehenderit ut.
+              Web developer with a strong foundation in JavaScript, HTML, and
+              PHP, gained through Udemy courses. Focused on building dynamic,
+              responsive websites with a keen eye for detail and functionality.
             </p>
           </div>
         </div>
@@ -143,9 +140,11 @@
               Pearson PTE <a href=""><i class="bx bx-link-external"></i></a>
             </h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-              dolor provident veritatis architecto veniam tenetur, molestiae
-              possimus odit fugit facere aliquid alias eos reprehenderit ut.
+              PTE is a world-leading provider of secure English language tests.
+              Pearson Test of English (PTE) provides secure English language
+              testing for study applications worldwide, and for visa
+              applications for work and migration in Australia, the UK, New
+              Zealand, and Canada.
             </p>
           </div>
         </div>
@@ -157,9 +156,9 @@
               <a href=""><i class="bx bx-link-external"></i></a>
             </h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-              dolor provident veritatis architecto veniam tenetur, molestiae
-              possimus odit fugit facere aliquid alias eos reprehenderit ut.
+              Web developer with a solid background in JavaScript, HTML, and
+              PHP. Currently enhancing full-stack skills through a MERN course
+              at Interactive Cares to build dynamic, modern web applications.
             </p>
           </div>
         </div>
@@ -170,9 +169,10 @@
               Data Structure <a href=""><i class="bx bx-link-external"></i></a>
             </h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-              dolor provident veritatis architecto veniam tenetur, molestiae
-              possimus odit fugit facere aliquid alias eos reprehenderit ut.
+              Data structures are organized ways to store and manage data
+              efficiently. They include arrays, linked lists, stacks, queues,
+              and trees, and are essential for optimizing algorithms and
+              enhancing program performance.
             </p>
           </div>
         </div>
@@ -276,11 +276,46 @@
             rows="10"
             placeholder="Your Message"
           ></textarea>
-          <input type="submit" value="Send Message" class="btn">
+          <input type="submit" value="Send Message" class="btn" />
         </div>
       </form>
     </section>
     <!---------Contact Section End---------->
     <!---------Contact Section End---------->
+
+    <!---------Footer Section Start---------->
+    <!---------Footer Section Start---------->
+    <footer class="footer">
+      <div class="social-icon">
+        <a href="https://www.linkedin.com/in/himelsahadat/"
+          ><i class="bx bxl-linkedin"></i
+        ></a>
+        <a href="#"><i class="bx bxl-facebook"></i></a>
+        <a href="#"><i class="bx bxl-instagram"></i></a>
+        <a href="https://github.com/himelsahadat"
+          ><i class="bx bxl-github"></i
+        ></a>
+      </div>
+      <ul class="list">
+        <li>
+          <a href="#">FAQ</a>
+        </li>
+        <li>
+          <a href="#">About Me</a>
+        </li>
+        <li>
+          <a href="#">Service</a>
+        </li>
+        <li>
+          <a href="#">Testimonial</a>
+        </li>
+        <li>
+          <a href="#">Contact</a>
+        </li>
+      </ul>
+      <p class="copyright">© Himel Sahadat ┃ All Right Reserved</p>
+    </footer>
+    <!---------Footer Section End---------->
+    <!---------Footer Section End---------->
   </body>
 </html>
