--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div class="logo">
         <a href="#home">Himel <span>Sahadat</span></a>
       </div>
+      <i class='bx bx-menu' id="menu-icon"></i>
 
       <nav class="navbar">
         <ul>
